--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "react-native-dropdown-autocomplete",
+  "name": "@nextgencodecompany/react-native-dropdown-autocomplete",
   "version": "1.0.16",
   "author": "maxkordiyak",
-  "repository": "maxkordiyak/react-native-dropdown-autocomplete",
+  "repository": "TylerH-AllSocial/react-native-dropdown-autocomplete",
   "license": "MIT",
   "main": "index.js",
   "keywords": [
