--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@nextgencodecompany/react-native-dropdown-autocomplete",
   "version": "1.0.16",
-  "author": "maxkordiyak",
+  "author": "NextGEN Code Company",
   "repository": "TylerH-AllSocial/react-native-dropdown-autocomplete",
   "license": "MIT",
   "main": "index.js",
